--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,69 @@
-.App {
+*{
+  margin: 0;
+  padding: 0;
+}
+.App h1{
+  font-size: 40px;
   text-align: center;
+  margin-bottom: 20px;
+  font-weight: 500;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.card{
+  position: relative;
+  width: 450px;
+  height: 500px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  left: 38%;
+  border-radius: 12px;
+  margin-bottom: 40px;
+  transition: all 0.4s ease-out;
+  transform: scale(1.0);
+  overflow: hidden;
+  background-color: #484848;
+}
+.card:hover{
+  transform: scale(1.08);
+  cursor: pointer;
+}
+
+.img img{
+  height: 300px;
+  object-fit: cover;
+  position: absolute;
+}
+
+.body{
+  height: 200px;
+  width: 100%;
+  padding-top: 300px;
+  position: relative;
+}
+
+.title{
+  font-size: 26px;
+  text-align: center;
+  font-weight: 600;
+  margin-bottom: 10px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.team{
+ font-size: 18px;
+ font-weight: 400;
+ margin-bottom: 10px;
+ color: white;
+ padding-left: 10px;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.team span{
+  font-size: 22px;
+  font-weight: 600;
+  color: white; 
+  padding-left: 10px;
 }
+
+
+
